afajardo - JAR beta version 0.0.1

--- a/src/main/resources/excel/managedExcel.properties
+++ b/src/main/resources/excel/managedExcel.properties
@@ -1,4 +1,6 @@
+#-----------------------------------------------------------------
 # Information:
+#-----------------------------------------------------------------
 # CellTypes
 # NUMERIC: 0 > Used for date cells too.
 # STRING: 1
@@ -6,156 +8,181 @@
 # BLANK: 3
 # BOOLEAN: 4
 # ERROR: 5
+#-----------------------------------------------------------------
+#Java Types admitted in version 0.0.1
+#-----------------------------------------------------------------
+#Numeric: BigInteger, Double, Long --> This use CellTypes.NUMERIC
+#Text: String --> This use CellTypes.STRING
+#Dates: Date (java.util) --> This use CellTypes.NUMERIC
+#Logic: Boolean  --> This use CellTypes.BOOLEAN
 
-# Workbook number of sheets
-wb.num.sheets=2
+#-----------------------------------------------------------------
+#	FAQS
+#-----------------------------------------------------------------
+# What is a Concrete Cell?
+# It is a cell that you know the specific reference (row and col)
 
-# For each sheet
+# What is a Data Row Cell?
+# It is a cell that you only klow the col position. 
+# Row will be iterated from initial.data.row property until last.data.row property (if informed) 
+# or until the last row in the sheet in process
 
-########## SHEET 1 - START ##########
+
+
+#-----------------------------------------------------------------
+#	CONFIGURATION
+#-----------------------------------------------------------------
+
+# For each sheet you want to process, you must configure the data access and binding
+########## SHEET 0 - START ##########
 # Sheet index in the Workbook
-sheet1.index=0
+#sheetX partial property must be the same that sheetX.index value informed
+sheet0.index=0
 
 # Class for sheet data
-sheet1.info.class = IndicadoresHCDTO
+sheet0.info.class = IndicadoresHCDTO
 
 # Number of concrete cells. If don't have concrete cells, the value has to be 0
-sheet1.num.concrete.cells=3
+sheet0.num.concrete.cells=3
 
 # For each concrete cell (required if "Number of concrete cells" is greater than 0)
-sheet1.cell1.reference=B4
-sheet1.cell1.type=0
-sheet1.cell1.binding.field=fecha
-sheet1.cell1.binding.method=
+sheet0.cell1.reference=B4
+sheet0.cell1.java.type=Date
+sheet0.cell1.binding.field=fecha
 
-sheet1.cell2.reference=F3
-sheet1.cell2.type=0
-sheet1.cell2.binding.field=fechaDesde
-sheet1.cell2.binding.method=
+sheet0.cell2.reference=F3
+sheet0.cell2.java.type=Date
+sheet0.cell2.binding.field=fechaDesde
 
-sheet1.cell3.reference=F4
-sheet1.cell3.type=0
-sheet1.cell3.binding.field=fechaHasta
-sheet1.cell3.binding.method=
+sheet0.cell3.reference=F4
+sheet0.cell3.java.type=Date
+sheet0.cell3.binding.field=fechaHasta
 
 # First row index with data to process. If don't have rows to process, the value has to be 0
-sheet1.data.row.initial.index=7
+sheet0.data.row.initial.index=7
+
+# Last row index with data to process. If you don't know, set 0 to this value and 
+# the application process until last row of the sheet
+sheet0.data.row.last.index=0
+
+# Class Binding for data row
+# If you want to use different class to binding data rows information, you must to have
+# a List typed with the object you specify here in the object you set in sheetX.info.class property
+sheet0.data.row.binding.class=DetalleIndicadoresHCDTO
+#No need to inform if the binding class is the same that sheetX.info.class
+sheet0.data.row.binding.field.name=datos
 
 # Number of columns for each data row
-sheet1.data.row.num.cells=5
+sheet0.data.row.num.cells=5
 
 # Columns
-sheet1.data.row.cell1.col=A
-sheet1.data.row.cell1.type=1
-sheet1.data.row.cell1.binding.field=centro
-sheet1.data.row.cell1.binding.method=
+sheet0.data.row.cell1.col=A
+sheet0.data.row.cell1.java.type=String
+sheet0.data.row.cell1.binding.field=centro
 
-sheet1.data.row.cell2.col=B
-sheet1.data.row.cell2.type=1
-sheet1.data.row.cell2.binding.field=linea
-sheet1.data.row.cell2.binding.method=
+sheet0.data.row.cell2.col=B
+sheet0.data.row.cell2.java.type=String
+sheet0.data.row.cell2.binding.field=linea
 
-sheet1.data.row.cell3.col=C
-sheet1.data.row.cell3.type=1
-sheet1.data.row.cell3.binding.field=categoria
-sheet1.data.row.cell3.binding.method=
+sheet0.data.row.cell3.col=C
+sheet0.data.row.cell3.java.type=String
+sheet0.data.row.cell3.binding.field=categoria
 
-sheet1.data.row.cell4.col=E
-sheet1.data.row.cell4.type=1
-sheet1.data.row.cell4.binding.field=tipoContrato
-sheet1.data.row.cell4.binding.method=
+sheet0.data.row.cell4.col=E
+sheet0.data.row.cell4.java.type=String
+sheet0.data.row.cell4.binding.field=tipoContrato
 
-sheet1.data.row.cell5.col=G
-sheet1.data.row.cell5.type=0
-sheet1.data.row.cell5.binding.field=headCount
-sheet1.data.row.cell5.binding.method=
+sheet0.data.row.cell5.col=G
+sheet0.data.row.cell5.java.type=BigInteger
+sheet0.data.row.cell5.binding.field=headCount
 
-########## SHEET 1 - END ##########
+########## SHEET 0 - END ##########
 
 ########## SHEET 2 - START ##########
 # Sheet index in the Workbook
-sheet2.index=1
+#sheetX partial property must be the same that sheetX.index value informed
+sheet1.index=1
 
 # Class for sheet data
-sheet2.info.class = DetalleHCDTO
+sheet1.info.class = DetalleHCDTO
 
 # Number of concrete cells. If don't have concrete cells, the value has to be 0
-sheet2.num.concrete.cells=0
+sheet1.num.concrete.cells=0
 
 # For each concrete cell (required if "Number of concrete cells" is greater than 0)
-# sheet2.cell1.reference=B4
-# sheet2.cell1.type=Date
+#sheet1.cell1.reference=B4
+#sheet1.cell1.java.type=Date
+#sheet1.cell1.binding.field=fecha
 
 # First row index with data to process. If don't have rows to process, the value has to be 0
-sheet2.data.row.initial.index=3
+sheet1.data.row.initial.index=3
+
+# Last row index with data to process. If you don't know, set 0 to this value and 
+# the application process until last row of the sheet
+sheet1.data.row.last.index=0
+
+# Class Binding for data row
+# If you want to use different class to binding data rows information, you must to have
+# a List typed with the object you specify here in the object you set in sheetX.info.class property
+# If you want to use the same Class that was informed in sheetX.info.class, specify the same value
+sheet1.data.row.binding.class=DetalleHCDTO
+#No need to inform if the binding class is the same that sheetX.info.class
+#sheet1.data.row.binding.field.name=
 
 # Number of columns for each data row
-sheet2.data.row.num.cells=13
+sheet1.data.row.num.cells=13
 
 # Columns
-sheet2.data.row.cell1.col=A
-sheet2.data.row.cell1.type=1
-sheet2.data.row.cell1.binding.field=numeroEmpleado
-sheet2.data.row.cell1.binding.method=
+sheet1.data.row.cell1.col=A
+sheet1.data.row.cell1.java.type=BigInteger
+sheet1.data.row.cell1.binding.field=numeroEmpleado
 
-sheet2.data.row.cell2.col=B
-sheet2.data.row.cell2.type=1
-sheet2.data.row.cell2.binding.field=nombre
-sheet2.data.row.cell2.binding.method=
+sheet1.data.row.cell2.col=B
+sheet1.data.row.cell2.java.type=String
+sheet1.data.row.cell2.binding.field=nombre
 
-sheet2.data.row.cell3.col=C
-sheet2.data.row.cell3.type=1
-sheet2.data.row.cell3.binding.field=apellidos
-sheet2.data.row.cell3.binding.method=
+sheet1.data.row.cell3.col=C
+sheet1.data.row.cell3.java.type=String
+sheet1.data.row.cell3.binding.field=apellidos
 
-sheet2.data.row.cell4.col=D
-sheet2.data.row.cell4.type=1
-sheet2.data.row.cell4.binding.field=categoriaProfesional
-sheet2.data.row.cell4.binding.method=
+sheet1.data.row.cell4.col=D
+sheet1.data.row.cell4.java.type=String
+sheet1.data.row.cell4.binding.field=categoriaProfesional
 
-sheet2.data.row.cell5.col=E
-sheet2.data.row.cell5.type=1
-sheet2.data.row.cell5.binding.field=cargo
-sheet2.data.row.cell5.binding.method=
+sheet1.data.row.cell5.col=E
+sheet1.data.row.cell5.java.type=String
+sheet1.data.row.cell5.binding.field=cargo
 
-sheet2.data.row.cell6.col=F
-sheet2.data.row.cell6.type=1
-sheet2.data.row.cell6.binding.field=horario
-sheet2.data.row.cell6.binding.method=
+sheet1.data.row.cell6.col=F
+sheet1.data.row.cell6.java.type=String
+sheet1.data.row.cell6.binding.field=horario
 
-sheet2.data.row.cell7.col=G
-sheet2.data.row.cell7.type=1
-sheet2.data.row.cell7.binding.field=contrato
-sheet2.data.row.cell7.binding.method=
+sheet1.data.row.cell7.col=G
+sheet1.data.row.cell7.java.type=String
+sheet1.data.row.cell7.binding.field=contrato
 
-sheet2.data.row.cell8.col=H
-sheet2.data.row.cell8.type=1
-sheet2.data.row.cell8.binding.field=fechaIncorporacion
-sheet2.data.row.cell8.binding.method=
+sheet1.data.row.cell8.col=H
+sheet1.data.row.cell8.java.type=Date
+sheet1.data.row.cell8.binding.field=fechaIncorporacion
 
-sheet2.data.row.cell9.col=I
-sheet2.data.row.cell9.type=1
-sheet2.data.row.cell9.binding.field=fechaBaja
-sheet2.data.row.cell9.binding.method=
+sheet1.data.row.cell9.col=I
+sheet1.data.row.cell9.java.type=String
+sheet1.data.row.cell9.binding.field=fechaBaja
 
-sheet2.data.row.cell10.col=J
-sheet2.data.row.cell10.type=1
-sheet2.data.row.cell10.binding.field=centro
-sheet2.data.row.cell10.binding.method=
+sheet1.data.row.cell10.col=J
+sheet1.data.row.cell10.java.type=String
+sheet1.data.row.cell10.binding.field=centro
 
-sheet2.data.row.cell11.col=K
-sheet2.data.row.cell11.type=1
-sheet2.data.row.cell11.binding.field=linea
-sheet2.data.row.cell11.binding.method=
+sheet1.data.row.cell11.col=K
+sheet1.data.row.cell11.java.type=String
+sheet1.data.row.cell11.binding.field=linea
 
-sheet2.data.row.cell12.col=L
-sheet2.data.row.cell12.type=1
-sheet2.data.row.cell12.binding.field=celda
-sheet2.data.row.cell12.binding.method=
+sheet1.data.row.cell12.col=L
+sheet1.data.row.cell12.java.type=String
+sheet1.data.row.cell12.binding.field=celda
 
-sheet2.data.row.cell13.col=M
-sheet2.data.row.cell13.type=1
-sheet2.data.row.cell13.binding.field=tecnologia
-sheet2.data.row.cell13.binding.method=
+sheet1.data.row.cell13.col=M
+sheet1.data.row.cell13.java.type=String
+sheet1.data.row.cell13.binding.field=tecnologia
 
 ########## SHEET 2 - END ##########
