--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Basic Excel Reader</name>
   <description>Excel reader to load excel information in the objects you want</description>
+  <url>https://github.com/afajardomorera/ExcelReader</url>
   
   <dependencies>
   <!-- EXCEL -->    
@@ -29,14 +30,36 @@
 	<dependency>
     	<groupId>org.apache.commons</groupId>
     	<artifactId>commons-collections4</artifactId>
-    	<version>${apache.commons.version}</version>
+    	<version>${apache.commons.collection.version}</version>
 	</dependency>
-  	
+	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+	<dependency>
+	    <groupId>org.apache.commons</groupId>
+	    <artifactId>commons-lang3</artifactId>
+	    <version>${apache.commons.lang.version}</version>
+	</dependency>
   </dependencies>
+  
+  <build>
+  	<plugins>
+		<plugin>
+        	<groupId>org.apache.maven.plugins</groupId>
+        	<artifactId>maven-compiler-plugin</artifactId>
+        	<version>${maven.compiler.version}</version>
+        	<configuration>
+    	      	<source>${java.version}</source>
+          		<target>${java.version}</target>
+        	</configuration>
+      	</plugin>  	
+ 	</plugins>
+  </build>
   
   <!-- PROPERTIES -->
   <properties>
   	<poi.version>3.13</poi.version>
-  	<apache.commons.version>4.0</apache.commons.version>
+  	<maven.compiler.version>3.8.0</maven.compiler.version>
+  	<java.version>1.8</java.version>
+  	<apache.commons.collection.version>4.0</apache.commons.collection.version>
+  	<apache.commons.lang.version>3.0</apache.commons.lang.version>
   </properties>
 </project>
