afajardo - class comments and javadoc generation

--- a/src/main/resources/excel/managedExcel.properties
+++ b/src/main/resources/excel/managedExcel.properties
@@ -11,7 +11,7 @@
 #-----------------------------------------------------------------
 #Java Types admitted in version 0.0.1
 #-----------------------------------------------------------------
-#Numeric: BigInteger, Double, Long --> This use CellTypes.NUMERIC
+#Numeric: BigInteger, Double, Long, Integer --> This use CellTypes.NUMERIC
 #Text: String --> This use CellTypes.STRING
 #Dates: Date (java.util) --> This use CellTypes.NUMERIC
 #Logic: Boolean  --> This use CellTypes.BOOLEAN
