afajardo - new property sheet.index.to.process that indicates the diferent sheets to process

--- a/src/main/resources/excel/managedExcel.properties
+++ b/src/main/resources/excel/managedExcel.properties
@@ -33,6 +33,9 @@
 #	CONFIGURATION
 #-----------------------------------------------------------------
 
+# Sheet indexes to process (values with comma separates)
+sheet.index.to.process=0,1
+
 # For each sheet you want to process, you must configure the data access and binding
 ########## SHEET 0 - START ##########
 # Sheet index in the Workbook
